--- a/SafeCity/SafeCity.UI/wwwroot/css/appeal.css
+++ b/SafeCity/SafeCity.UI/wwwroot/css/appeal.css
@@ -23,159 +23,34 @@ h1{
     margin: 0;
 }
 
-/* Header */
-
-.header {
-    padding: 20px 0;
-    width: 100%;
-    font-family: 'Roboto', sans-serif;
-    background-color: white;
-    
-    opacity: .7;
-    z-index: 1222;
-}
-
-.header__body {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-}
-
-.header__inner{
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    
-    width: 100px;
-    z-index: 33;
-}
-
-.header__burger{
-    font-size: 32px;
-    text-align: center;
-    cursor: pointer;
-}
-
-.header__logo{
-    height: 40px;
-    width: 40px;
-
-    margin-left: 32px;
-
-    background: url("img/logo.png") no-repeat center;
-    background-size: 100%;
-
-    cursor: pointer;
-}
-
-.header__menu {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-
-    min-width: 955px;
-    
-    align-items: center;
-    text-align: center;
-
-}
-
-.header__list {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    
-    align-items: center;
-}
-
-.header__link {
-
-    font-size: 18px;
-
-    align-items: center;
-    text-align: center;
-
-    color: rgb(46, 46, 46);
-    text-decoration: none;
-}
-
-.header__link:hover {
-    font-weight: 700;
-    color: #223a76;
-    text-decoration: underline;
-}
-
-
-/* Appeal */
-
 .appeal{
-    margin:  25px 150px 60px;
-}
-
-.appeal__title{
+    width: 40%;
+    align-items: center;
     text-align: center;
-
-    font-family: Century Gothic;
-    font-size: 25px;
-    color: #223a76;
 }
 
 .appeal__inner{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-
-    margin-top: 50px;
-}
-
-.appeal__left{
-    width: 45%;
-
-    text-align: justify;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 135%;
-}
-
-.appeal__right{
-    width: 40%;
-
-    font-family: Montserrat;
-
+    margin: 30px 0 30px;
     border: #223a76 1px solid;
     border-radius: 10px;
 }
 
-.appeal__right-title{
-
+.appeal__title{
     margin-top: 32px;
     margin-bottom: 42px;
-
     text-align: center;
-
     font-style: normal;
     font-weight: 300;
     font-size: 14px;
     color: #223a76;
 }
 
-.appeal__right-item{
-    margin-bottom: 20px;
+.appeal__item{
+    margin: 20px 50px;
     font-size: 14px;
 }
 
-.appeal__right-inner{
-    margin: 0 100px;
-}
 
-.appeal__right-subtitle{
-    margin-bottom: 10px;
-}
 
 .appeal__select{
     padding: 0 5px;
@@ -191,7 +66,7 @@ h1{
     border-radius: 5px;
 }
 
-.appeal__iput-email{
+.appeal__iput{
     padding: 0 5px;
 
     width: 100%;
@@ -240,92 +115,11 @@ h1{
     color: white;
 
     border: none;
-    border-radius: 100px;
+    border-radius: 10px;
 
     background: #223a76;
 
     cursor: pointer;
 
     text-transform: uppercase;
-}
-
-
-
-/* Footer */
-
-.footer{
-    background: #223A76;
-}
-
-.footer__inner{
-
-    padding: 45px 200px;
-
-    display: flex;
-    justify-content: space-between;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 21px;
-
-    color: white;
-}
-
-.footer__title{
-    margin-bottom: 20px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-
-}
-
-.footer__text {
-    margin-bottom: 10px;
-}
-
-.footer__text p{
-    margin-bottom: 10px;
-}
-
-.footer__text p:last-child{
-    color: yellow;
-}
-
-.footer__link--icon{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer__link--icon a{
-    font-size: 25px;
-    margin-right: 35px;
-    color: white;
-    text-decoration: none;
-}
-
-.footer__link{
-
-    padding-bottom: 10px;
-
-    display: block;
-    color: white;
-    text-decoration: none;
-}
-
-.footer__input{
-    margin-bottom: 10px;
-}
-
-.footer__input input{
-    height: 40px;
-    width: 100%
-}
-
-.footer__but button{
-    height: 30px;
 }
