added new slide show

--- a/UI/css/appeal.css
+++ b/UI/css/appeal.css
@@ -24,7 +24,7 @@ h1{
 }
 
 .appeal{
-    width: 40%;
+    width: 600px;
     align-items: center;
     text-align: center;
 }
@@ -123,3 +123,4 @@ h1{
 
     text-transform: uppercase;
 }
+
