Revert "* merge into feature/8"
This reverts commit eeab8defc98ee9e3564a00a63f37cce849f910f0, reversing
changes made to dd6dd1fe7cc737fe446a24b9b8d2d552f12ce5c9.

--- a/UI/css/appeal.css
+++ b/UI/css/appeal.css
@@ -24,7 +24,7 @@ h1{
 }
 
 .appeal{
-    width: 600px;
+    width: 40%;
     align-items: center;
     text-align: center;
 }
@@ -123,4 +123,3 @@ h1{
 
     text-transform: uppercase;
 }
-
