--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -64,7 +64,7 @@ font-weight: bold;
 }
 
 .footer{
-    background-color: rgb(31, 73, 125);
+    background-color: rgb(31, 73, 125);;
 }
 
 .footer--inner{
