--- a/UI/sass/blocks/_solved.scss
+++ b/UI/sass/blocks/_solved.scss
@@ -2,7 +2,7 @@
     margin: 50px 0 50px 0;
     h2{
         font-weight: bold;
-        color: rgb(31, 73, 125);
+        color: $title_color;
         font-size: 1.75rem;
     }
 }
