--- a/UI/sass/blocks/_promo.scss
+++ b/UI/sass/blocks/_promo.scss
@@ -2,7 +2,7 @@
     margin-top: 55px;
     h1, h2{
         font-weight: bold;
-        color: rgb(31, 73, 125);
+        color: $title_color;
         font-size: 1.75rem;
         margin: 0;
     }
