--- a/SafeCity/SafeCity.Client/wwwroot/sass/style.scss
+++ b/SafeCity/SafeCity.Client/wwwroot/sass/style.scss
@@ -5,11 +5,15 @@
 }
 body {
     height: 100%;
-    font-family: Century Gothic;
+    font-family: 'Roboto', sans-serif;
+    
     margin: 0;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
+    h1, h2, li{
+        font-family: Century Gothic;
+    }
 }
 .map{
     height: 600px;
