slider content added and stats value changed

--- a/SafeCity/SafeCity.Client/wwwroot/sass/blocks/_solved.scss
+++ b/SafeCity/SafeCity.Client/wwwroot/sass/blocks/_solved.scss
@@ -5,4 +5,15 @@
         color: $title_color;
         font-size: 1.75rem;
     }
+    .slider-descr{
+        /* transform: translateY(50px); */
+        display: block;
+        margin: 0 auto;
+        width: 103%;
+        background-color: #fff;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        text-align: center;
+        font-size: 26px;
+    }
 }
